[package]
name = "narwhal"
authors = ["anak10thn <anak10thn@gmail.com>"]
version = "0.1.0"
edition = "2021"

[[bin]]
name = "narwhal"
path = "src/cli.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocksdb = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["precommit-hook", "run-cargo-fmt"]